Fixed issued with wrapper spacing in V10

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -13,6 +13,11 @@
 
 #migrated {
 
+    .bk-pt-default {
+        margin-top: 0;
+        padding-top: 40px;
+    }
+
     // Remove the canvas padding to allow rows to go full width
     .canvas {
         padding: 0;
